refactor: merge derivatives lifecycle providers